# backend

./: .gitignore  이미지_BBX_Sim_code.ipynb
app/: main.py  room_designer.py
app/stabledesign/: .gitattributes  README.md  app.py  inference.py
app/stabledesign/controlnet/: diffusion_pytorch_model.safetensors
app/stabledesign/controlnet_depth/: config.json  diffusion_pytorch_model.safetensors
app/stabledesign/own_controlnet/: config.json
fastapi/: .gitignore  db.vuerd.json  pyproject.toml
fastapi/src/: main.py
fastapi/src/config/sql_alchemy/models/: user.py
fastapi/src/google/: object_detection.py  similarity.py
fastapi/src/mock/: object_detection.py
fastapi/src/routers/: index_router.py  interior_router.py  product_router.py
fastapi/src/services/: interior_service.py  product_service.py  test.py
interior-generator/: img_resize.py  main.py  test_transform_room.py
interior-generator/stabledesign/: requirements.txt
object_detection_sim/: Objectdetection.py  main.py
