[tool.poetry]
name = "sessac"
version = "0.1.0"
description = ""
authors = ["constnumber <constnumber@laivdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.3"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
python-dotenv = "^1.0.1"
google-cloud-vision = "^3.7.3"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
